Add openapi generated code from spec 2.9.1
